[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes/Massage.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=4]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Massage_1-loop"

[sub_resource type="AnimationNodeStateMachine" id=25]
states/Massage_1-loop/node = SubResource( 24 )
states/Massage_1-loop/position = Vector2( 435, 191 )
start_node = "Massage_1-loop"

[sub_resource type="AnimationNodeBlendTree" id=26]
graph_offset = Vector2( -157.661, -32.5744 )
nodes/Animation/node = SubResource( 3 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 4 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 25 )
nodes/StateMachine/position = Vector2( 218.339, 139.426 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Massage_2-loop"

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Massage_2-loop/node = SubResource( 27 )
states/Massage_2-loop/position = Vector2( 461, 155 )
start_node = "Massage_2-loop"
graph_offset = Vector2( -44, -56 )

[sub_resource type="AnimationNodeBlendTree" id=29]
graph_offset = Vector2( -299.532, 64.6842 )
nodes/Animation/node = SubResource( 3 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 4 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 28 )
nodes/StateMachine/position = Vector2( 160, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="Massage" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.196641, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 26 )
anim_player = NodePath("../Doll3D/DollSkeleton/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 22 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 29 )
anim_player = NodePath("../Doll3D2/DollSkeleton/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 23 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
